--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My-hidden-awesome-project</title>
+    <title>The Website</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.bmp">
 </head>
 <body>
-<h1>Welkom</h1>
+    <nav>
+        <ul>
+            <li class="current"><a href="index.html">My First Website</a></li>
+            <li><a href="charts.html">Charts</a></li>
+            <li><a href="svg.html">SVG</a></li>
+        </ul>
+    </nav>
+    <h1>Welkom</h1>
    <h2>op deze website</h2> 
    <img src="img/oke.png" alt="New fast pc free buy now yes" class="center">
     <p> <br> website is voor de minor Data Visualisatie</p>
