--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
     <nav>
         <ul>
-            <li class="current"><a href="index.html">My First Website</a></li>
+            <li class="current"><a href="index.html"> First Website </a></li>
             <li><a href="charts.html">Charts</a></li>
             <li><a href="svg.html">SVG</a></li>
         </ul>
     </nav>
-    <h1>Welkom</h1>
-   <h2>op deze website</h2> 
-   <img src="img/oke.png" alt="New fast pc free buy now yes" class="center">
-    <p> <br> website is voor de minor Data Visualisatie</p>
-    <a href="https://www.reddit.com"><p class="link">Klik voor Wereldnieuws</p></link></a>
-        
+    <h1 class="rainbow">Welkom</h1>
+    <h2 class="rainbow">op deze website</h2> 
+    <img src="img/oke.png" alt="New fast pc free buy now yes" class="center" width="500px">
+    <p> <br> Deze website is voor de minor Data Visualisatie.</p>
+    <a href="https://www.reddit.com"><p class="rainbow">Klik voor Wereldnieuws</p></link></a>
+    <img src="img/giphy.gif" class="center" width="250px">    
     
 </body>
 </html>
