--- a/svg.html
+++ b/svg.html
@@ -6,14 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The SVG</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/98.css">
     <link rel="icon" href="favicon.bmp">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">My first webpage</a></li>
-            <li><a href="charts.html">Charts</a></li>
-            <li class="current"><a href="svg.html">SVG</a></li>
+            <button onclick="location.href='index.html'">First website</button>
+            <button onclick="location.href='charts.html'">Charts</button>
+            <button onclick="location.href='svg.html'">SVG</button>
+            <!--li class="current"><a href="index.html"> First Website </a></li-->
+            <!--li><a href="charts.html">Charts</a></li-->
+            <!--li><a href="svg.html">SVG</a></li-->
         </ul>
     </nav>
     <h1>Opdracht B</h1>
