--- a/charts.html
+++ b/charts.html
@@ -3,14 +3,19 @@
     <head>
         <title>Chart</title>
          <link rel="stylesheet" type="text/css" href="css/style.css">
-    </head>
-    <body>
-      <nav>
-        <ul>
-            <li><a href="index.html">My first webpage</a></li>
-            <li class="current"><a href="charts.html">Charts</a></li>
-            <li><a href="svg.html">SVG</a></li>
-        </ul>
+         <link rel="stylesheet" href="https://unpkg.com/98.css">
+         <link rel="icon" href="favicon.bmp">
+     </head>
+     <body>
+         <nav>
+             <ul>
+                 <button onclick="location.href='index.html'">First website</button>
+                 <button onclick="location.href='charts.html'">Charts</button>
+                 <button onclick="location.href='svg.html'">SVG</button>
+                 <!--li class="current"><a href="index.html"> First Website </a></li-->
+                 <!--li><a href="charts.html">Charts</a></li-->
+                 <!--li><a href="svg.html">SVG</a></li-->
+             </ul>
     </nav>
         
         <h1>Beneden is de data chart weergegeven.</h1>
