--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Website</title>
+    
+    <link rel="stylesheet" href="https://unpkg.com/98.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.bmp">
 </head>
 <body>
     <nav>
         <ul>
-            <li class="current"><a href="index.html"> First Website </a></li>
-            <li><a href="charts.html">Charts</a></li>
-            <li><a href="svg.html">SVG</a></li>
+            <button onclick="location.href='index.html'">First website</button>
+            <button onclick="location.href='charts.html'">Charts</button>
+            <button onclick="location.href='svg.html'">SVG</button>
+            <!--li class="current"><a href="index.html"> First Website </a></li-->
+            <!--li><a href="charts.html">Charts</a></li-->
+            <!--li><a href="svg.html">SVG</a></li-->
         </ul>
     </nav>
     <h1 class="rainbow">Welkom</h1>
