--- a/charts.html
+++ b/charts.html
@@ -18,27 +18,27 @@
              </ul>
     </nav>
         
-        <h1>Beneden is de data chart weergegeven.</h1>
+        <h1 style="font-size: 30px;">Beneden is de data chart weergegeven.</h1>
         
         <table class="table table-hover" style="width:100%;">
             <tr>
               <td>
                 <div class="table1" style="width:60%;">
-                    <h4><em>HTML 60%</em></h4>
+                    <h4 style="font-size: 15px";><em>HTML 60%</em></h4>
                 </div>
               </td>
             </tr>
             <tr>
               <td>
                 <div class="table2" style="width:40%;">
-                    <h4><em>CSS 40%</em></h4>
+                    <h4 style="font-size: 15px"><em>CSS 40%</em></h4>
                 </div>
               </td>
             </tr>
             <tr>
               <td>
                 <div class="table3" style="width:6%;">
-                    <h4><em>PHP 0%</em></h4>
+                    <h4 style="font-size: 15px"><em>PHP 0%</em></h4>
                 </div>
               </td>
             </tr>
