--- a/svg.html
+++ b/svg.html
@@ -20,16 +20,16 @@
             <!--li><a href="svg.html">SVG</a></li-->
         </ul>
     </nav>
-    <h1>Opdracht B</h1>
+    <h1 style="font-size: 30px;">Opdracht B</h1>
         <div style="text-align: center;"> 
             <img src="svg/somethingworthseeing.svg" alt="svg image" height="150px">
         </div>
-        <h1>Opdracht C</h1>
+        <h1 style="font-size: 30px";>Opdracht C</h1>
         <div style="text-align: center; height: 150px;">
         
             <img src="svg/opdrachtc.svg" alt="svg image">
         </object>
-        <h1>Opdracht D</h1>
+        <h1 style="font-size: 30px;">Opdracht D</h1>
         <div class="opdrachtD">
             <svg class="cross" width="500px" viewBox="0 0 5 5">
                 <path d="M 2 1 h 1 v 1 h 1 v 1 h -1 v 1 h -1 v -1 h -1 v -1 h 1 z" />
