--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Website</title>
-    
-    <link rel="stylesheet" href="https://unpkg.com/98.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="favicon.bmp">
-</head>
-<body>
-    <nav>
-        <ul>
-            <button onclick="location.href='index.html'">First website</button>
-            <button onclick="location.href='charts.html'">Charts</button>
-            <button onclick="location.href='svg.html'">SVG</button>
-            <!--li class="current"><a href="index.html"> First Website </a></li-->
-            <!--li><a href="charts.html">Charts</a></li-->
-            <!--li><a href="svg.html">SVG</a></li-->
-        </ul>
-    </nav>
-    <h1 class="rainbow">Welkom</h1>
-    <h2 class="rainbow">op deze website</h2> 
-    <img src="img/oke.png" alt="New fast pc free buy now yes" class="center" width="500px">
-    <p> <br> Deze website is voor de minor Data Visualisatie.</p>
-    <a href="https://www.reddit.com"><p class="rainbow">Klik voor Wereldnieuws</p></link></a>
-    <img src="img/giphy.gif" class="center" width="250px">    
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>The Website</title>
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://unpkg.com/98.css">
+        <link rel="icon" href="favicon.bmp">
+    </head>
+    <body>
+        <nav>
+            <ul>
+                <button onclick="location.href='index.html'">First website</button>
+                <button onclick="location.href='charts.html'">Charts</button>
+                <button onclick="location.href='svg.html'">SVG</button>
+                <!--li class="current"><a href="index.html"> First Website </a></li-->
+                <!--li><a href="charts.html">Charts</a></li-->
+                <!--li><a href="svg.html">SVG</a></li-->
+            </ul>
+        </nav>
+        <h1 class="rainbow">Welkom</h1>
+        <h2 class="rainbow">op deze website</h2> 
+        <img src="img/oke.png" alt="" class="center" width="500px">
+        <p> <br></p>
+        <a href="https://www.reddit.com"><p class="rainbow">Klik voor Wereldnieuws</p></a>
+        <img src="img/giphy.gif" class="center" width="250px">         
+    </body>
+    <footer>
+		&copy Ralph Lemaire - 2021 <br>  Deze website is voor de minor Data Visualisatie.
+    </footer>
 </html>
