--- a/charts.html
+++ b/charts.html
@@ -18,7 +18,7 @@
              </ul>
         </nav>
         
-        <h1 style="font-size: 30px;">Beneden is de data chart weergegeven.</h1>
+        <h1 style="font-size: 30px; color: #000000;">Beneden is de data chart weergegeven.</h1>
         
         <table class="table table-hover" style="width:100%;">
             <tr>
